fix: adjust small text color in dark mode

--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -38,7 +38,6 @@
   margin-left: 6em;
 }
 .timeline-info small {
-  color: #474559;
   font-size: 16px;
   font-weight: bold;
   display: inline-block;
